fix: implementation of rest api layer for exam library
